--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,48 +1,23 @@
 
 <!-- include header -->
-    <%- include('include/_header') %>
+<%- include('include/_header') %>
 <!-- /include header -->
 
-
-    <!-- Main Site -->
-    <main id="site-main">
-        <div class="container">
-            <div class="box-nav d-flex justify-between">
-                <a href="/input-data" class="border-shadow">
-                    <span class="text-gradient">Input Data</span>
-                </a>
-            </div>
-
-            <!-- form handling -->
-            <form action="/" method="POST">
-                <table class="table">
-                    <thead class="thead-dark">
-                        <tr>
-                            <th rowspan="2">ID</th>
-                            <th rowspan="2">Tanggal</th>
-                            <th rowspan="2">Kode</th>
-                            <th rowspan="2">Nama Pangkalan</th>
-                            <th rowspan="2">Keterangan</th>
-                            <th colspan="2">Jumlah Tabung</th>
-                            <th colspan="2">Pembayaran</th>
-                            <th rowspan="2">Aksi</th>
-                            <tr>
-                                <th>Cash-less</th>
-                                <th>Tunai</th>
-                                <th>Cash-less</th>
-                                <th>Tunai</th>
-                            </tr>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <%- include('include/_show') %>
-                    </tbody>
-                </table>
-            </form>
+<!-- Main Site -->
+<main id="site-main">
+    <div class="container">
+        <div class="form-title text-center">
+            <h2 class="text-dark">Sales Management</h2>
+            <span class="text-light">Pt. Cahyo Sumber Migas</span>
         </div>
-    </main>
+        <div class="block justify-between ">
+            <a href="/penjualan-lpg" class="">
+                <span class="text-gradient">Penjualan</span>
+            </a>
+        </div>
+    </div>
+</main>
 <!-- /Main Site -->
-
 
 <!-- include footer -->
 <%- include('include/_footer') %>
