--- a/views/update_data.ejs
+++ b/views/update_data.ejs
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="box-nav d-flex justify-between">
             <div class="filter">
-                <a href="/"><i class="fas fa-angle-double-left"></i> Display Data</a>
+                <a href="/penjualan-lpg"><i class="fas fa-angle-double-left"></i> Display Data</a>
             </div>
         </div>
         <div class="form-title text-center">
