--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow&family=PT+Sans&display=swap');
 
+/*Semua syntax css untuk mengedit UI*/
+
 :root{
     --dark: #4C3957;
     --light: #70A37F;
