update tombol pada tabel

--- a/views/update_data.ejs
+++ b/views/update_data.ejs
@@ -16,7 +16,7 @@
             <span class="text-light">Gunakan form dibawah ini untuk mengupdate data</span>
         </div>
 
-        <!-- add elpiji form -->
+        <!-- form add elpiji  -->
         <!-- form handling -->
 <form method="POST" id="update_data">
     <div class="new_data">
