update tombol pada tabel

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow&family=PT+Sans&display=swap');
 
-/*Semua syntax css untuk mengedit UI*/
+/*Syntax css untuk mengedit UI*/
 
 :root{
     --dark: #4C3957;
