--- a/views/penjualan_lpg.ejs
+++ b/views/penjualan_lpg.ejs
@@ -18,7 +18,7 @@
             </div>
 
             <!-- form handling -->
-            <form action="/" method="POST">
+            <form action="/penjualan-lpg" method="POST">
                 <table class="table">
                     <thead class="thead-dark">
                         <tr>
