Mengubah aksi menjadi bersampingan

--- a/views/penjualan_lpg.ejs
+++ b/views/penjualan_lpg.ejs
@@ -29,7 +29,7 @@
                             <th rowspan="2">Keterangan</th>
                             <th colspan="2">Jumlah Tabung</th>
                             <th colspan="2">Pembayaran</th>
-                            <th rowspan="2">Aksi</th>
+                            <th colspan="2", rowspan="2">Aksi</th>
                             <tr>
                                 <th>Cash-less</th>
                                 <th>Tunai</th>
