--- a/views/include/_form.ejs
+++ b/views/include/_form.ejs
@@ -29,7 +29,7 @@
             <input type="number" name="bayar_tunai" value="" placeholder="Tunai">
 
         <div class="form-group">
-            <button type="submit" class="btn text-light update">Save</button>
+            <button type="submit" class="btn text-dark update">Save</button>
         </div>
 
     </div>
