--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
         </div>
         <a href="/penjualan-lpg" class="">
             <div class="block justify-between ">
-                <span class="text-gradient">Penjualan</span>
+                <span class="text-pop">Penjualan</span>
             </div>
         </a>
     </div>
