--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,6 +144,10 @@ table{
   color: black;
 }
 
+.delete {
+    cursor: pointer
+}
+
 @media only screen and (max-width: 1024px){
     table, thead, tbody, th, td, tr{
         display: block;
