feat(ui): spacing between button and table

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,9 @@
     <div class="container">
         <div class="form-title text-center">
             <h2 class="text-dark">Sales Management</h2>
-            <span class="text-light">Pt. Cahyo Sumber Migas</span>
+            <span class="text-light">PT CAHYO SUMBER MIGAS</span>
         </div>
+        <br />
         <a href="/penjualan-lpg" class="">
             <div class="block justify-between ">
                 <span class="text-pop">Penjualan</span>
