--- a/views/penjualan_lpg.ejs
+++ b/views/penjualan_lpg.ejs
@@ -12,10 +12,11 @@
                 </div>
             </div>
             <div class="align_right box-nav d-flex justify-between ">
-                <a href="/input-data" class="border-plain">
-                    <span class="text-gradient">Input Data</span>
+                <a href="/input-data" class="border-plain" >
+                    <span class="text-gradient" >Input Data</span>
                 </a>
             </div>
+            <br />
 
             <!-- form handling -->
             <form action="/penjualan-lpg" method="POST">
@@ -29,7 +30,8 @@
                             <th rowspan="2">Keterangan</th>
                             <th colspan="2">Jumlah Tabung</th>
                             <th colspan="2">Pembayaran</th>
-                            <th colspan="2", rowspan="2">Aksi</th>
+                            <th rowspan="2">Update</th>
+                            <th rowspan="2">Delete</th>
                             <tr>
                                 <th>Cash-less</th>
                                 <th>Tunai</th>
