--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -137,10 +137,7 @@ h3 {
 
 .btn {
   padding: 10px 20px;
-  border: 1px solid #000;
   border-radius: 5px;
-  background: #000;
-  color: #fff;
   font-size: 16px;
   font-weight: 700;
   cursor: pointer;
@@ -149,6 +146,16 @@ h3 {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  display: flex;
+  flex-direction: row;
+  width: 50%;
+  height: 50px;
+  background-color: #00C95C;
+  margin: 4px;
+  border: 3px #001F0E solid;
+  text-decoration: none;
+  border-radius: 10px;
 }
 
 .btn svg {
@@ -167,6 +174,11 @@ h3 {
 
 .btn:hover {
   transform: scale(0.98);
+  background: #001F0E;
+  transition: all 0.4s ease;
+  /* svg, span {
+      color: #00FF75;
+  } */
 }
 
 .loadingSpinnerContainer {
