--- a/frontend/src/pages/Sales/Table/Sales.scss
+++ b/frontend/src/pages/Sales/Table/Sales.scss
@@ -1,12 +1,22 @@
-#tables {
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: #f5f5f5;
+    padding: 0.5em;
+    margin: 0.5em;
+    left: 40px;
+    
+}
+
+#tables {   
     $background: #efefef;
 $lfs-blue: #006ac6;
 $lfs-yellow: #fab700;
 $lfs-grey: #75787b;
-
-a {
-    
-}
 
 .table-latitude {
     width: 100%;
@@ -54,4 +64,8 @@ a {
         }
     }
 }
+
+.table_wrapper {
+    overflow-x: auto;
+  }
 }
