--- a/frontend/src/pages/Dashboard/Dashboard.scss
+++ b/frontend/src/pages/Dashboard/Dashboard.scss
@@ -11,6 +11,10 @@
     
 }
 
+// * {
+//     border: 1px#001F0E solid;
+// }
+
 .page-illustration {
     display: flex;
     flex-direction: column;
@@ -18,7 +22,7 @@
     align-items: center;
     margin-top: 6em;
     margin-left: 192px;
-    padding: 16px;
+    padding: 0px;
     align-items: center;
     color: #32383e;
     font-family: 'Barlow', sans-serif;
