--- a/frontend/src/pages/Sales/Table/Sales.scss
+++ b/frontend/src/pages/Sales/Table/Sales.scss
@@ -9,63 +9,78 @@
     padding: 0.5em;
     margin: 0.5em;
     left: 40px;
-    
 }
 
 #tables {   
     $background: #efefef;
-$lfs-blue: #006ac6;
-$lfs-yellow: #fab700;
-$lfs-grey: #75787b;
+    $lfs-blue: #006ac6;
+    $lfs-yellow: #fab700;
+    $lfs-grey: #75787b;
 
 .table-latitude {
-    width: 100%;
-    thead {
-        border-top: 2px solid $lfs-yellow;
-        border-bottom: 2px solid $lfs-yellow;
-        th {
-            text-transform: uppercase;
-            text-align: center;
-            padding: 10px;
-            color: $lfs-blue;
-            border: 1px solid #000000;
-        }
-        tr {
-            text-transform: uppercase;
-            text-align: center;
-            padding: 10px;
-            color: $lfs-blue;
-            border: 1px solid #000000;
-        }
-    }
-    tbody {
-        tr {
-            border-bottom: 1px solid #000000;
-            color: $lfs-grey;
-            td {
-                padding: 10px;
-                border: 1px solid #000000;
-            }
+        width: 100%;
+        thead {
+            border-top: 2px solid $lfs-yellow;
+            border-bottom: 2px solid $lfs-yellow;
             th {
-                padding-left: 10px;
+                text-transform: uppercase;
+                text-align: center;
+                padding: 10px;
+                color: $lfs-blue;
+                border: 1px solid #000000;
+            }
+            tr {
+                text-transform: uppercase;
+                text-align: center;
+                padding: 10px;
+                color: $lfs-blue;
                 border: 1px solid #000000;
             }
         }
-    }
-    tfoot {
-        color: $lfs-yellow;
-        font-style: italic;
-        border-bottom: 2px solid $lfs-yellow;
-        tr {
-            td {
-                padding: 10px;
-                border: 1px solid #000000;
+        tbody {
+            tr {
+                border-bottom: 1px solid #000000;
+                color: $lfs-grey;
+                td {
+                    padding: 10px;
+                    border: 1px solid #000000;
+                }
+                th {
+                    padding-left: 10px;
+                    border: 1px solid #000000;
+                }
             }
+        }
+        tfoot {
+            color: $lfs-yellow;
+            font-style: italic;
+            border-bottom: 2px solid $lfs-yellow;
+            tr {
+                td {
+                    padding: 10px;
+                    border: 1px solid #000000;
+                }
+            }
+        }
+
+        .table_wrapper {
+            overflow-x: auto;
         }
     }
 }
 
-.table_wrapper {
-    overflow-x: auto;
-  }
+
+
+.columnheader {
+    border-bottom: 2px solid #75787b;
+        th {
+            text-transform: uppercase;
+            text-align: center;
+            padding: 10px;
+        }
+        tr {
+            text-transform: uppercase;
+            text-align: center;
+            padding: 10px;
+        }
 }
