--- a/frontend/src/pages/Sales/Table/Sales.scss
+++ b/frontend/src/pages/Sales/Table/Sales.scss
@@ -76,11 +76,17 @@
         th {
             text-transform: uppercase;
             text-align: center;
+            justify-content: center;
+            align-items: center;
             padding: 10px;
+            margin: 0 auto;
         }
         tr {
             text-transform: uppercase;
             text-align: center;
+            justify-content: center;
+            align-items: center;
             padding: 10px;
+            margin: 0 auto;
         }
 }
