Menambahkan Fitur Search

--- a/frontend/src/pages/Sales/Table/Sales.scss
+++ b/frontend/src/pages/Sales/Table/Sales.scss
@@ -64,7 +64,43 @@
         }
 
         .table_wrapper {
-            overflow-x: auto;
+            overflow: auto;
+        }
+    }
+}
+
+#site-main {
+    > .container {
+        overflow: scroll;
+
+        .table_wrapper {
+            
+            height: 100%;
+            width: 100%;
+
+            * {
+                text-align: center;
+            }
+        }
+    }
+
+    .sales-header {
+        width: 100%;
+        height: auto;
+
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-start;
+        left: 40px;
+
+        .sales-search {
+            flex-direction: row;
+            width: 60%;
+            height: 100%;
+            padding: 0.5em;
+            margin: 0.5em;
+            
         }
     }
 }
@@ -81,4 +117,8 @@
             text-align: center;
             padding: 10px;
         }
+}
+
+.btnx:hover {
+    cursor: pointer;
 }
