rework(frontend): dashboard page
Rework dashboard to display summary of sales

--- a/frontend/src/pages/Dashboard/Dashboard.scss
+++ b/frontend/src/pages/Dashboard/Dashboard.scss
@@ -43,7 +43,7 @@
         width: 50%;
         height: 50px;
         align-items: center;
-        justify-content: start;
+        justify-content: center;
         background-color: #00C95C;
         margin: 4px;
         border: 3px #001F0E solid;
