Update client frontend

--- a/frontend/src/pages/Home/Home.scss
+++ b/frontend/src/pages/Home/Home.scss
@@ -3,10 +3,12 @@
     height: 100%;
     padding-left: 2em;
 
-    .container {
+
+    > .container {
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
+        justify-content: center;
         width: 100%;
         height: 100%;
         box-sizing: border-box;
@@ -62,5 +64,8 @@
             
         }
     }
-    
+}
+
+#root > .container #site-main .container {
+    justify-content: center;
 }
