--- a/frontend/src/components/Sidebar/Sidebar.scss
+++ b/frontend/src/components/Sidebar/Sidebar.scss
@@ -3,16 +3,21 @@
 // }
 
 .nav-bar {
-    background: #00C95C;
-    width: 192px;
-    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
     position: fixed;
+
+    background: #00C95C;
+
+    width: 192px;
+    height: 100vh;
+    
     top: 0;
     left: 0;
     z-index: 1;
-    min-height: 500px;
     min-width: 60px;
-    box-sizing: border-box;
 
     * {
         box-sizing: border-box;
@@ -21,13 +26,12 @@
     .logo {
         display: block;
         padding: 8px 0;
-        box-sizing: border-box;
 
         img {
             display: block;
             width: 80%;
             height: auto;
-            margin: 16px auto;
+            margin: 8px auto;
         }
 
         &:hover {
@@ -45,29 +49,20 @@
         align-items: center;
         width: 100%;
         height: auto;
-        margin: 16px auto;
+        margin: 0 auto;
     
 
         .app-title {
             display: block;
-            padding: auto 4px;
+            padding: auto 0;
             box-sizing: border-box;
             text-align: center;
             color: #F5F6F1;
-            font-size: 1.25rem;
+            font-size: 1.2em;
             font-weight: bold;
             
-            
-            width: 75%;
+            width: 80%;
         }
-    }
-
-    hr {
-        position: relative;
-        display: block;
-        width: 80px;
-        height: 2px;
-        color: #001F0E;
     }
 }
 
