--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,7 +10,7 @@ body {
   font-family: 'Poppins', sans-serif;
   height: 100vh;
   background-color: #f5f5f5;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 a {
@@ -37,7 +37,7 @@ h3 {
   margin-bottom: 10px;
 }
 
-.container {
+#root > .container {
   width: 100%;
   max-width: 960px;
   margin: 0 auto;
