--- a/frontend/src/pages/Dashboard/Dashboard.scss
+++ b/frontend/src/pages/Dashboard/Dashboard.scss
@@ -1,19 +1,84 @@
-.container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    background-color: #f5f5f5;
-    padding: 0.5em;
-    margin: 0.5em;
-    
-}
+#root {
+    width: 100vw;
+    height: 100vh;
+    display: block;
 
-// * {
-//     border: 1px#001F0E solid;
-// }
+    > .container{
+        width: 100vw;
+        height: 100vh;
+
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        
+        .nav-bar {
+            width: 20%;
+            height: 100%;
+        }
+
+        #site-main {
+            width: 80%;
+            height: 100%;
+            right: 0px;
+            
+
+            .container {
+                width: 100%;
+                height: 100%;
+                overflow: hidden;
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
+                align-items: center;
+
+                .content {
+                    width: 100%;
+                    height: 30%;
+
+                    * {
+                        margin: 0px;
+                        padding: 0px;
+                    }
+                }
+
+                .dashboard-summary {
+                    width: 100%;
+                    height: 70%;
+                    
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-evenly;
+
+                    .dashboard-item-list {
+                        width: 100%;
+                        height: 80%;
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: space-between;
+                        align-items: center;
+
+                        > div {
+                            width: 50%;
+                            height: 100%;
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            align-items: center;
+                            padding: 10px;
+
+                            .dashboard-item {
+                                text-align: left;
+                                width: 80%;
+                                height: auto;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
 
 .page-illustration {
     display: flex;
@@ -50,16 +115,10 @@
         text-decoration: none;
         border-radius: 10px;
 
-        svg {
-            font-size: 30px;
-            margin: 0 32px;
-            width: 15%;
-        }
-
         span {
             color: #001F0E;
             margin-left: 4px;
-            width: 85%;
+            width: 100%;
             width: auto;
         }
 
