--- a/frontend/src/components/Sidebar/Sidebar.scss
+++ b/frontend/src/components/Sidebar/Sidebar.scss
@@ -174,3 +174,67 @@ nav {
 .hide-element {
     display: none;
 }
+
+@media (max-width: 1080px) {
+    .nav-bar {
+        width: 120px;
+        height: 100vh;
+        min-width: 60px;
+        
+        .menu-button {
+            height: 48px;
+            margin: 8px auto;
+            svg {
+                font-size: 30px;
+                width: 30px;
+                height: 24px;
+                margin-left: 16px;
+                margin-right: 16px;
+            }
+            .nav-bar__item-title {
+                display: none;
+            }
+        }
+        nav {
+            width: 100%;
+            > div {
+                width: 100%;
+                height: 48px;
+                margin: 8px auto;
+                padding: 0;
+
+                svg {
+                    font-size: 30px;
+                    width: 30px;
+                    height: 24px;
+                    margin-left: 16px;
+                    margin-right: 16px;
+                }
+
+                .nav-bar__item-title {
+                    display: none;
+                }
+            }
+        }
+
+        .sidebar-footer {
+            width: 80%;
+            button {
+                width: 100%;
+                height: 48px;
+                margin: 8px auto;
+                svg {
+                    font-size: 30px;
+                    width: 30px;
+                    height: 24px;
+                    margin-left: 16px;
+                    margin-right: 16px;
+                }
+
+                .nav-bar__item-title {
+                    display: none;
+                }
+            }
+        }
+    }
+}
