--- a/frontend/src/pages/Dashboard/Dashboard.scss
+++ b/frontend/src/pages/Dashboard/Dashboard.scss
@@ -34,7 +34,6 @@
 
                 .content {
                     width: 100%;
-                    height: 30%;
 
                     * {
                         margin: 0px;
@@ -57,6 +56,7 @@
                         flex-direction: row;
                         justify-content: space-between;
                         align-items: center;
+                        overflow: scroll;
 
                         > div {
                             width: 50%;
@@ -91,6 +91,30 @@
     align-items: center;
     color: #32383e;
     font-family: 'Barlow', sans-serif;
+
+    .logo {
+        position: relative;
+
+
+        > img {
+            position: relative;
+        }
+    }
+}
+
+#site-main {
+    > .container {
+        .content {
+            .page-illustration {
+                .logo {
+                    img {
+                        height: 256px;
+                        width: auto;
+                    }
+                }
+            }
+        }
+    }
 }
 
 .dashboard-item-list {
@@ -127,6 +151,65 @@
             transition: all 0.4s ease;
             svg, span {
                 color: #00FF75;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 800px) {
+    #root {
+        > .container { 
+            #site-main {
+                .container {
+                    .dashboard-summary {
+                        .dashboard-item-list
+                        {
+                            flex-direction: column;
+                            justify-content: center;
+
+                            > div {
+                                width: 100%;
+                                height: auto;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-height: 712px) {
+    .sidebar-body {
+        .content {
+            display: none;
+        }
+    }
+
+    #site-main {
+        > .container {
+            .content {
+                .page-illustration {
+                    .logo {
+                        img {
+                            height: 128px;
+                            width: auto;
+                        }
+                    }
+                }
+            }
+
+            .dashboard-summary {
+                p {
+                    font-size: 1rem;
+                }
+
+                .dashboard-item-list {
+                    
+                        top: 0;
+                        padding-top: 60%;
+                    
+                }
             }
         }
     }
