hotfix(fe): login and register page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -247,7 +247,7 @@ h3 {
   margin: 0 !important;
 }
 
-.shadow-box {
+.login-body {
   /* display: flex; */
   /* justify-content: center; */
   width: 50%;
