--- a/frontend/src/components/Sidebar/Sidebar.scss
+++ b/frontend/src/components/Sidebar/Sidebar.scss
@@ -12,7 +12,7 @@
     background: #00C95C;
 
     width: 192px;
-    height: 100vh;
+    height: 100%;
     
     top: 0;
     left: 0;
@@ -199,9 +199,9 @@ nav {
 }
 
 @media (max-width: 1080px) {
-    .nav-bar {
+     #root > .container .nav-bar {
         width: 120px;
-        height: 100vh;
+        height: 100%;
         min-width: 60px;
         
         .menu-button {
@@ -238,13 +238,19 @@ nav {
                     display: none;
                 }
             }
+
+            > a {
+                .nav-bar__item-title {
+                    display: none;
+                }
+            }
         }
 
         .sidebar-footer {
             width: 80%;
             button {
                 width: 100%;
-                height: 48px;
+                height: 100%;
                 margin: 8px auto;
                 svg {
                     font-size: 30px;
@@ -252,6 +258,85 @@ nav {
                     height: 24px;
                     margin-left: 16px;
                     margin-right: 16px;
+                }
+
+                .nav-bar__item-title {
+                    display: none;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 580px) {
+    #root > .container .nav-bar {
+        width: 80px;
+        height: 100%;
+        
+        .menu-button {
+            height: 48px;
+            margin: 8px auto;
+            svg {
+                font-size: 30px;
+                width: 30px;
+                height: 24px;
+                margin-left: 16px;
+                margin-right: 16px;
+            }
+            .nav-bar__item-title {
+                display: none;
+            }
+        }
+        
+        .sidebar-body {
+            .content {
+
+                .sidebar-illustration {
+                    display: none;
+                }
+            }
+
+            nav {
+                width: 100%;
+                > div {
+                    width: 100%;
+                    height: 48px;
+                    margin: 8px auto;
+                    padding: 0;
+    
+                    svg {
+                        font-size: 30px;
+                        width: 30px;
+                        height: 24px;
+                        margin-left: 0px;
+                        margin-right: 0px;
+                    }
+    
+                    .nav-bar__item-title {
+                        display: none;
+                    }
+                }
+    
+                > a {
+                    .nav-bar__item-title {
+                        display: none;
+                    }
+                }
+            }
+        }
+
+        .sidebar-footer {
+            width: 80%;
+            button {
+                width: 100%;
+                height: 100%;
+                margin: 8px auto;
+                svg {
+                    font-size: 30px;
+                    width: 30px;
+                    height: 24px;
+                    margin-left: 0px;
+                    margin-right: 0px;
                 }
 
                 .nav-bar__item-title {
