--- a/frontend/src/pages/Dashboard/Dashboard.scss
+++ b/frontend/src/pages/Dashboard/Dashboard.scss
@@ -1,3 +1,5 @@
+
+
 #root {
     width: 100vw;
     height: 100vh;
@@ -5,7 +7,7 @@
 
     > .container{
         width: 100vw;
-        height: 100vh;
+        height: 100%;
 
         display: flex;
         flex-direction: row;
@@ -43,7 +45,7 @@
 
                 .dashboard-summary {
                     width: 100%;
-                    height: 70%;
+                    height: fit-content;
                     
                     display: flex;
                     flex-direction: column;
@@ -51,7 +53,7 @@
 
                     .dashboard-item-list {
                         width: 100%;
-                        height: 80%;
+                        height: fit-content;
                         display: flex;
                         flex-direction: row;
                         justify-content: space-between;
@@ -161,7 +163,13 @@
     }
 }
 
+#dashboard {
+    justify-content: center !important;
+}
+
 @media screen and (max-width: 800px) {
+
+
     #root {
         > .container { 
             #site-main {
@@ -181,6 +189,10 @@
                 }
             }
         }
+    }
+
+    #dashboard {
+        justify-content: center !important;
     }
 }
 
@@ -217,5 +229,9 @@
                 }
             }
         }
+    }
+
+    #dashboard {
+        justify-content: center !important;
     }
 }
