--- a/frontend/src/pages/Home/Home.scss
+++ b/frontend/src/pages/Home/Home.scss
@@ -1,3 +1,7 @@
+#home {
+    justify-content: center !important;
+}
+
 #site-main {
     width: 100%;
     height: 100%;
@@ -66,6 +70,14 @@
     }
 }
 
-#root > .container #site-main .container {
+#root > .container #site-main {
+    > .container {
+        justify-content: center;
+    }
+    
+}
+
+#root > .container #site-main > .container {
     justify-content: center;
 }
+
