--- a/frontend/src/pages/Sales/Table/Sales.scss
+++ b/frontend/src/pages/Sales/Table/Sales.scss
@@ -80,7 +80,6 @@
     left: none;
 
     > .container {
-        overflow: scroll;
         width: 100%;
 
         .table_wrapper {
@@ -180,7 +179,6 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    overflow: scroll;
 
     .sales-header {
         width: 100%;
@@ -192,7 +190,7 @@
         justify-content: flex-start;
 
         .sales-search {
-            flex-direction: row;
+            justify-self: center;
             width: 70%;
             height: 100%;
             padding: 0.5em;
@@ -207,7 +205,5 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
-        overflow: scroll;
     }
 }
